--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <div>
    <a href="tel:+79059059588">+7 905 905 95 88</a>
     </div>
-    
+    <div>
+        e-mail 
+    </div>
 </body>
 </html>
